--- a/index.html
+++ b/index.html
@@ -17,27 +17,31 @@
         </div>
     </nav>
     <header>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <img src="src/assets/image/image1.png" alt="" width="577.09px" height="533.07px">
-        <img src="src/assets/image/image2.png" alt="" whidth="604.92px" height="535.63px">
+        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <img src="src/assets/image/image1.png" alt="painting 1" class="painting1" width="577.09px" height="533.07px">
+        <img src="src/assets/image/image2.png" alt="painting 2" class="painting2" whidth="604.92px" height="535.63px">
         <h1>Creative</h1>
         <h1>Design</h1>
-        <button>Get a Quote</button>
+        <button class="quote">Get a Quote</button>
     </header>
-    <div class="portifolio_container">
+    <div class="portfolio-container">
         <h2>Portfolio</h2>
-        <img src="src/assets/image/image3.png" alt="" width="577.09px" height="995.48px">
-        <img src="src/assets/image/image4.png" alt="" width="577.09px" height="624.7px">
-        <img src="src/assets/image/image5.png" alt="" width="577.09px" height="1389.22px">
-        <img src="src/assets/image/image6.png" alt="" width="577.09px" height="818.34px">
-        <img src="src/assets/image/image7.png" alt="" width="577.09px" height="802.87px">
-        <img src="src/assets/image/image8.png" alt="" width="577.09px" height="605.76px">
+        <img src="src/assets/image/image3.png" alt="painting 3" width="577.09px" height="995.48px">
+        <img src="src/assets/image/image4.png" alt="painting 4" width="577.09px" height="624.7px">
+        <img src="src/assets/image/image5.png" alt="painting 5" width="577.09px" height="1389.22px">
+        <img src="src/assets/image/image6.png" alt="painting 6" width="577.09px" height="818.34px">
+        <img src="src/assets/image/image7.png" alt="painting 7" width="577.09px" height="802.87px">
+        <img src="src/assets/image/image8.png" alt="painting 8" width="577.09px" height="605.76px">
     </div>
-    <div class="about_container">
+    <div class="about-container">
         <h2>About</h2>
-        <p>We create stunning Lorem ipsum dolor sit amet, consectetur adipiscing elit.We create stunning Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <p>After 10 years of experience Lorem ipsum dolor sit amet, consectetur adipiscing elit.We create stunning Lorem ipsum dolor sit amet, consectetur adipiscing elit.We create stunning Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <img src="src/assets/image/photo1.png" alt="" width="589.52px" height="805.88px">
+        <div class="about-img">
+            <div class="about">
+                <p>We create stunning Lorem ipsum dolor sit amet, consectetur adipiscing elit.We create stunning Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>After 10 years of experience Lorem ipsum dolor sit amet, consectetur adipiscing elit.We create stunning Lorem ipsum dolor sit amet, consectetur adipiscing elit.We create stunning Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <img src="src/assets/image/photo1.png" alt="photo 1" width="500px">
+        </div>
     </div>
     <div class="testimonials_container">
         <h2>Tentimonials</h2>
@@ -46,21 +50,21 @@
             <h3>“Amazing Team with Lorem Ipsum”</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,</p>
             <a>See full review</a>
-            <img src="src/assets/image/photo2.png" alt="" width="309.01px" height="327.08px">
+            <img src="src/assets/image/photo2.png" alt="photo 2" width="309.01px" height="327.08px">
         </div>
         <div class="commets">
             <h3>“Amazing Team with Lorem ipsum”</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,</p>
             <a>See full review</a>
-            <img src="src/assets/image/photo4.png" alt="" width="309.01px" height="327.08px">
+            <img src="src/assets/image/photo4.png" alt="photo 4" width="309.01px" height="327.08px">
         </div>
         <div class="commets">
             <h3>“Amazing Team with Lorem ipsum”</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,</p>
             <a>See full review</a>
-            <img src="src/assets/image/photo3.png" alt="" width="309.01px" height="327.08px">
+            <img src="src/assets/image/photo3.png" alt="photo 3" width="309.01px" height="327.08px">
         </div>
-        <button>See All Reviews</button>
+        <button class="see-all">See All Reviews</button>
     </div>
     <div class="contact_container">
         <h2>Contact</h2>
