--- a/index.html
+++ b/index.html
@@ -7,31 +7,44 @@
     <title>Home</title>
 </head>
 <body>
-    <nav>
-        <a>LOGO</a>
-        <div class="menu">
-            <a>HOME</a>
-            <a>PORTIFOLIO</a>
-            <a>ABOUT</a>
-            <a>CONTACT</a>
-        </div>
-    </nav>
     <header>
-        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <nav>
+            <a>LOGO</a>
+            <div class="menu">
+                <a>HOME</a>
+                <a>PORTIFOLIO</a>
+                <a>ABOUT</a>
+                <a>CONTACT</a>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="paragraph">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
         <img src="src/assets/image/image1.png" alt="painting 1" class="painting1" width="577.09px" height="533.07px">
         <img src="src/assets/image/image2.png" alt="painting 2" class="painting2" whidth="604.92px" height="535.63px">
-        <h1>Creative</h1>
-        <h1>Design</h1>
-        <button class="quote">Get a Quote</button>
-    </header>
+        <div class="title">
+            <h1>Creative Design</h1>
+        </div>
+        <div class="button">
+            <button class="quote">Get a Quote</button>
+        </div>
+    </main>
     <div class="portfolio-container">
         <h2>Portfolio</h2>
-        <img src="src/assets/image/image3.png" alt="painting 3" width="577.09px" height="995.48px">
-        <img src="src/assets/image/image4.png" alt="painting 4" width="577.09px" height="624.7px">
-        <img src="src/assets/image/image5.png" alt="painting 5" width="577.09px" height="1389.22px">
-        <img src="src/assets/image/image6.png" alt="painting 6" width="577.09px" height="818.34px">
-        <img src="src/assets/image/image7.png" alt="painting 7" width="577.09px" height="802.87px">
-        <img src="src/assets/image/image8.png" alt="painting 8" width="577.09px" height="605.76px">
+        <div class="columns">
+            <div class="column1">
+                <img src="src/assets/image/image3.png" alt="painting 3" width="577.09px" height="995.48px">
+                <img src="src/assets/image/image6.png" alt="painting 6" width="577.09px" height="818.34px">
+                <img src="src/assets/image/image7.png" alt="painting 7" width="577.09px" height="802.87px">
+            </div>
+            <div class="column2">
+                <img src="src/assets/image/image4.png" alt="painting 4" width="577.09px" height="624.7px">
+                <img src="src/assets/image/image5.png" alt="painting 5" width="577.09px" height="1389.22px">
+                <img src="src/assets/image/image8.png" alt="painting 8" width="577.09px" height="605.76px">
+            </div>
+        </div>
     </div>
     <div class="about-container">
         <h2>About</h2>
@@ -43,7 +56,7 @@
             <img src="src/assets/image/photo1.png" alt="photo 1" width="500px">
         </div>
     </div>
-    <div class="testimonials_container">
+    <div class="testimonials-container">
         <h2>Tentimonials</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="commets">
